fix infoSnackBar NullPoint exception, fix compatibility broken of java8